src/containers/shared/components/TokenSearchResults/styles.scss
@import '../../css/variables';

.search-results-menu {
  position: absolute;
  z-index: 1;
  width: 100%;
  max-height: 400px;
  border: 1px solid $black-80;
  border-radius: 8px;
  border-top: 0px;
  margin-top: 6px;
  background-color: black;
  box-shadow: 2px 2px 15px 0px rgb(131 131 134 / 30%);
  overflow-wrap: anywhere;
  overflow-y: scroll;
  scrollbar-color: $black-50 transparent;
  scrollbar-width: thin;
}

.search-results-header {
  padding: 0.5rem 0rem 0.5rem 1rem;
  background-color: $black-80;
  font-size: 14px;
  font-weight: 500;
}

.result-row-icon {
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 16px;
}

.no-logo {
  border-radius: 50%;
  background-color: $black-50;
}

.result-currency {
  flex-shrink: 0;
  padding-top: 2px;
  padding-right: 0px;
  padding-bottom: 2px;
  white-space: nowrap;
}

.result-token-name {
  padding-top: 2px;
  padding-bottom: 2px;
  margin-left: 3px;
}

.result-logo {
padding-right: 14px;
padding-left: 1rem;
}

.search-result-row {
position: relative;
display: flex;
width: 100%;
height: 100%;
padding-top: 13px;
padding-bottom: 13px;
color: white;
font-size: 14px;
font-weight: 500;

&:hover {
  background-color: $black-70;
  cursor: pointer;
}

}

.result-name-line {
display: flex;
margin-bottom: 0.5rem;
}

.result-issuer-line {
display: flex;
margin-bottom: 0.5rem;
color: $black-50
}

.result-website-line {
display: flex;
flex-direction: row;
color: $black-50;
}

.metric-chip {
padding: 2px 12px;
border: 1px solid $black-70;
border-radius: 100px;
margin-right: 8px;
margin-left: 8px;
background-color: black;
font-size: 12px;
font-weight: 600;

&:hover {
  background-color: black;
  cursor: pointer;
}
}

.issuer-link {
margin-left: 0.25rem;
color: $black-50;

&:hover {
  background: transparent;
  color: $blue-purple-30;
}

}

